# smart-grocery-housekeeping-winter-2026

./: .gitignore  README.md  list_of_resources.txt
backend/: .env-local  Dockerfile  README.md  db.py  main.py  pyproject.toml  requests.http  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  protected_router.py  public_router.py  router.py
backend/app/api/routes/: grocery_run.py  health.py  hello.py  inventory_batch.py  lookupBarcode.py  product.py  recognizeItem.py  user.py
backend/app/auth/: firebase.py
backend/app/core/: config.py  exceptions.py
backend/app/data_access/: deps.py  grocery_run_dal.py  inventory_batch_dal.py  product_dal.py  user_dal.py
backend/app/db/: base.py  deps.py  init_db.py  session.py
backend/app/models/: __init__.py  categories.py  category.py  enums.py  grocery_run.py  inventory_batch.py  product.py  products.py  user.py
backend/app/schemas/: category.py  firebase.py  grocery_run.py  inventory_batch.py  product.py  user.py
backend/app/services/: ai_recognition.py
backend/docs/: demo.http
backend/docs/postman/: app.postman_collection.json  example.postman_environment.json  firebaseAPI.postman_collection.json
backend/models/: categories.py  models.py  products.py  users.py
backend/tests/: conftest.py  test_api_deps.py  test_auth_firebase.py
frontend/: README.md  app.json  biome.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: _layout.tsx  (+2 more)
infrastructure/: .gitignore  ecr.tf  ecs.tf  ecs_taskdef.json  gha_runner.tf  initialization_script.sh  outputs.tf  provider.tf  variables.tf
(+38 files in other folders)
