[project]
name = "smart-grocery-housekeeping-api"
version = "0.1.0"
description = "API for the Smart Grocery Housekeeping application."
authors = [
    {name = "Smart Grocery Housekeeping Team"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
